[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.470588, 0.513726, 0.756863, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 459.0
margin_top = 243.0
margin_right = 565.0
margin_bottom = 357.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 106.0
margin_bottom = 14.0
text = "Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 106.0
margin_bottom = 18.0

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 106.0
margin_bottom = 42.0
text = "Resume Game"

[node name="ResetBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 106.0
margin_bottom = 66.0
text = "Restart Stage"

[node name="TitleBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 106.0
margin_bottom = 90.0
text = "Main Menu"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 106.0
margin_bottom = 114.0
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResetBtn" to="." method="_on_ResetBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TitleBtn" to="." method="_on_TitleBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
